Update project to support saas

--- a/stylesheets/App.scss
+++ b/stylesheets/App.scss
@@ -3,13 +3,11 @@
 @import 'abstracts/mixins';
 @import 'abstracts/utils';
 
-@import 'vendors/sanitize';
-
 @import 'base/base';
 
-@import 'layout/main-nav';
-@import 'layout/form';
-@import 'layout/grid';
+// @import 'layout/main-nav';
+// @import 'layout/form';
+// @import 'layout/grid';
 
 @import 'components/buttons';
 @import 'components/forms';
