--- a/stylesheets/components/_forms.scss
+++ b/stylesheets/components/_forms.scss
@@ -3,7 +3,7 @@
 }
 
 .c-input {
-  padding: $spacing-uni/2 $spacing-unit;
+  padding: ($spacing-unit / 2) $spacing-unit;
   font-size: 1em;
   background: #fff;
   border-radius: $border-radius;
