--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,125 @@
-.App {
+.u-flex {
+  display: flex; }
+
+.u-flex--vertical-center {
+  align-items: center; }
+
+.u-flex--center {
+  justify-content: center; }
+
+.u-flex__1 {
+  flex: 1; }
+
+.u-flex__2 {
+  flex: 2; }
+
+.u-flex__3 {
+  flex: 3; }
+
+.u-align-left {
+  text-align: left; }
+
+.u-align-right {
+  text-right: right; }
+
+.u-align-center {
+  text-align: center; }
+
+h2 > small {
+  display: block;
+  color: #737B7F;
+  font-size: .625em;
+  margin-top: 16px; }
+
+body {
+  color: #737B7F; }
+
+h1,
+h2,
+h3,
+h4 {
+  font-family: "Oswald", -apple-system, "Helvetica", serif;
+  color: #3F557F;
+  font-weight: normal; }
+
+h1 {
+  font-size: 3em; }
+
+h2 {
+  font-size: 1.75em; }
+
+h3 {
+  font-size: 1.5em; }
+
+h4 {
+  font-size: 1.25em; }
+
+a {
+  text-decoration: none;
+  color: #3377FF;
+  line-height: 1.2; }
+
+ul {
+  padding: 0;
+  list-style: none; }
+
+.c-button {
+  padding: 10.66667px 16px;
+  background-color: #F52C2C;
+  border-radius: 4px;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.35);
+  box-shadow: 0 2px 0px #ed0b0b;
+  color: #fff;
+  transition: background 150ms ease;
   text-align: center;
-}
+  line-height: 1.2;
+  display: inline-block;
+  vertical-align: baseline; }
+  .c-button:hover {
+    color: #fff;
+    background-color: #f41414;
+    box-shadow: 0 2px 0px #e30b0b; }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
+.c-button--white {
+  color: #F52C2C;
+  text-shadow: none;
+  background-color: #fff;
+  box-shadow: 0 2px 0px rgba(0, 0, 0, 0.25);
+  transition: box-shadow 150ms ease; }
+  .c-button--white:hover {
+    color: #F52C2C;
+    background-color: #fff;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25); }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
+.c-button--outline {
+  background-color: transparent;
+  text-shadow: none;
+  border: 1px solid rgba(255, 255, 255, 0.75);
+  color: rgba(255, 255, 255, 0.75);
+  box-shadow: none; }
+  .c-button--outline:hover {
+    background: transparent;
+    border-color: #fff; }
 
-.App-intro {
-  font-size: large;
-}
+.c-link {
+  padding: 4px 8px;
+  color: currentColor; }
+  .c-link:hover {
+    background-color: rgba(51, 119, 255, 0.15);
+    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.15); }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
+.c-link--white {
+  color: #fff; }
+  .c-link--white:hover {
+    background-color: rgba(0, 0, 0, 0.15); }
+
+.c-input {
+  padding: 8px 16px;
+  font-size: 1em;
+  background: #fff;
+  border-radius: 4px; }
+
+.c-label {
+  font-size: 1em;
+  font-weight: bold;
+  color: #3F557F; }
