Initialize styles and main navigation header 🤘

--- a/stylesheets/App.scss
+++ b/stylesheets/App.scss
@@ -3,14 +3,17 @@
 @import 'abstracts/mixins';
 @import 'abstracts/utils';
 
+@import 'vendors/sanitize';
+
 @import 'base/base';
 
-// @import 'layout/main-nav';
-// @import 'layout/form';
-// @import 'layout/grid';
+@import 'layouts/global';
+@import 'layouts/header';
 
 @import 'components/buttons';
 @import 'components/forms';
 
 @import 'pages/login';
 @import 'pages/signup';
+
+@import 'shame/shame';
