--- a/stylesheets/abstracts/_functions.scss
+++ b/stylesheets/abstracts/_functions.scss
@@ -5,3 +5,7 @@
 @function color($color) {
   @return map-get($colors, $color);
 }
+
+@function container($key) {
+  @return map-get($containers, $key);
+}
