--- a/stylesheets/abstracts/_utils.scss
+++ b/stylesheets/abstracts/_utils.scss
@@ -36,7 +36,7 @@
 
 h2 > small {
   display: block;
-  color: palette(anthracite);
+  color: color(text);
   font-size: .625em;
   margin-top: $spacing-unit;
 }
