--- a/stylesheets/base/_base.scss
+++ b/stylesheets/base/_base.scss
@@ -11,8 +11,10 @@ h2,
 h3,
 h4 {
   font-family: $font-headings;
+  text-transform: uppercase;
+  letter-spacing: -1px;
   color: color(text--dark);
-  font-weight: normal;
+  font-weight: bold;
 }
 
 h1 {
@@ -39,5 +41,6 @@ a {
 
 ul {
   padding: 0;
+  margin: 0;
   list-style: none;
 }
