--- a/stylesheets/components/_buttons.scss
+++ b/stylesheets/components/_buttons.scss
@@ -1,32 +1,44 @@
 .c-button {
   padding: $spacing-unit/(1.5) $spacing-unit;
-  background-color: color(primary);
+  background-image:
+    linear-gradient(
+      palette(yellow),
+      palette(yellow, warmer)
+    );
   border-radius: $border-radius;
   text-shadow: 0 1px 2px rgba(0,0,0,.35);
-  box-shadow: 0 2px 0px darken(color(primary), 8%);
+  box-shadow:
+    inset 0 -1px 0px transparentize(#FFF, .65),
+    inset 0 1px 0 transparentize(#FFF, .35),
+    0 2px 0 transparentize(#000, .88),
+    0 4px 4px transparentize(#000, .75);
   color: #fff;
-  transition: background 150ms ease;
+  transition: background-image 150ms ease;
   text-align: center;
+  font-weight: bold;
   line-height: $base-line-height;
   display: inline-block;
   vertical-align: baseline;
 
   &:hover {
     color: #fff;
-    background-color: darken(color(primary), 5%);
-    box-shadow: 0 2px 0px darken(color(primary), 10%);
+    background-image:
+      linear-gradient(
+        palette(yellow),
+        palette(yellow)
+      );
   }
 }
 
 .c-button--white {
-  color: color(primary);
+  color: color(secondary);
   text-shadow: none;
   background-color: #fff;
   box-shadow: 0 2px 0px transparentize(#000, .75);
   transition: box-shadow 150ms ease;
 
   &:hover {
-    color: color(primary);
+    color: color(secondary);
     background-color: #fff;
     box-shadow: 0 4px 10px transparentize(#000, .75);
   }
