--- a/stylesheets/components/_forms.scss
+++ b/stylesheets/components/_forms.scss
@@ -2,15 +2,30 @@
 
 }
 
-.c-input {
-  padding: ($spacing-unit / 2) $spacing-unit;
-  font-size: 1em;
-  background: #fff;
-  border-radius: $border-radius;
+.c-form-group {
+  margin-bottom: $spacing-unit;
 }
 
 .c-label {
+  display: block;
+  margin-bottom: ($spacing-unit / 4);
   font-size: 1em;
   font-weight: bold;
-  color: color(text--dark);
+  color: color(text);
+}
+
+.c-input {
+  padding: ($spacing-unit / 2) $spacing-unit;
+  font-size: 1em;
+  background-color: #fff;
+  border-radius: ($border-radius / 2);
+  border: 1px solid color(text--light);
+  transition: border-color 200ms ease-out;
+
+  &:hover,
+  &:focus,
+  &:active {
+    outline-color: transparentize(color(link), .75);
+    border-color: color(link);
+  }
 }
