--- a/stylesheets/layouts/_header.scss
+++ b/stylesheets/layouts/_header.scss
@@ -2,7 +2,7 @@
   background-color: color(primary);
   width: 100%;
   min-height: $header-height;
-  padding: $spacing-unit;
+  padding: $spacing-unit/1.5;
 }
 
 .g-header__nav {
