--- a/src/App.css
+++ b/src/App.css
@@ -519,7 +519,7 @@ h1,
 h2,
 h3,
 h4 {
-  font-family: "Oswald", sans-serif;
+  font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", sans-serif;
   text-transform: uppercase;
   letter-spacing: -1px;
   color: #192233;
@@ -540,7 +540,7 @@ h4 {
 a {
   text-decoration: none;
   color: #3377FF;
-  line-height: 1.5; }
+  line-height: 1.8; }
 
 a:focus, a:active,
 button:focus,
@@ -578,7 +578,7 @@ ul {
   background-color: #F52C2C;
   width: 100%;
   min-height: 60px;
-  padding: 16px; }
+  padding: 10.66667px; }
 
 .g-header__nav {
   display: flex;
@@ -875,21 +875,18 @@ ul {
   padding-bottom: 0; }
 
 .c-button {
-  padding: 10.66667px 16px;
-  background-image: linear-gradient(#FFBB00, #FFA200);
-  border-radius: 10px;
-  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.35);
-  box-shadow: inset 0 -1px 0px rgba(255, 255, 255, 0.35), inset 0 1px 0 rgba(255, 255, 255, 0.65), 0 2px 0 rgba(0, 0, 0, 0.12), 0 4px 4px rgba(0, 0, 0, 0.25);
+  padding: 6.4px 16px;
+  background-color: #FFA200;
+  border-radius: 4px;
   color: #fff;
-  transition: background-image 150ms ease;
+  transition: background-color 150ms ease;
   text-align: center;
-  font-weight: bold;
-  line-height: 1.5;
+  line-height: 1.8;
   display: inline-block;
-  vertical-align: baseline; }
+  vertical-align: middle; }
   .c-button:hover {
     color: #fff;
-    background-image: linear-gradient(#FFBB00, #FFBB00); }
+    background-color: #ffab1a; }
 
 .c-button--white {
   color: #FFA200;
@@ -938,7 +935,7 @@ ul {
   padding: 8px 16px;
   font-size: 1em;
   background-color: #fff;
-  border-radius: 5px;
+  border-radius: 2px;
   border: 1px solid #99A6BF;
   transition: border-color 200ms ease-out; }
   .c-input:hover, .c-input:focus, .c-input:active {
