--- a/src/App.css
+++ b/src/App.css
@@ -482,7 +482,11 @@ textarea,
 body {
   font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", sans-serif;
   color: #fff;
-  background-color: #222B31; }
+  background-image: url("../static/media/background.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top left;
+  min-height: 100vh; }
 
 a {
   text-decoration: none;
