--- a/stylesheets/App.scss
+++ b/stylesheets/App.scss
@@ -1,3 +1,5 @@
+@import 'utils/variables';
+
 @import 'abstracts/functions';
 @import 'abstracts/variables';
 @import 'abstracts/mixins';
@@ -7,3 +9,4 @@
 @import 'base/base';
 
 @import 'components/buttons';
+@import 'components/snackbar';
